--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-gapi": "^1.0.2",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
