--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gapi": "^1.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "url": "^0.11.0",
