--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "https-browserify": "^1.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "mixpanel-browser": "^2.45.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gapi": "^1.0.2",
